orion-proxy/conf/orion-runtime-health.yaml
#                                       /proxy/    ---> (cluster1) 192.168.2.10:80
#                                      |
#  http request ---> 192.168.1.1:8080 -|
#                                      |
#                                       (default)  ---> (cluster2) 127.0.0.1:80
#
#                                       /proxy/    ---> (cluster3) 192.168.2.10:81 (h2)
#                                      |
#  http request ---> 192.168.1.1:8081 -|
#                                      |
#                                      / 404
#

runtime:
  num_cpus: 1
  num_runtimes: 1
  event_interval: 31          # estimated optimal value
  global_queue_interval: null   # default
  max_io_ev ents_per_tick: null  # default

logging:
  log_level: "debug"
  log_directory: "."
  log_file: "orion.log"

envoy_bootstrap:
  static_resources:
    listeners:
      - name: listener_http
        address:
          socket_address: { address: 127.0.0.1, port_value: 8000 }
        filterChains:
          - name: filter_chain_http
            filter_chain_match:
              destination_port: 8000
            filters:
              - name: http_gateway
                typedConfig:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  statPrefix: ingress_http
                  codecType: HTTP1
                  http_filters:
                    - name: envoy.filters.http.router
                      typedConfig:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                        start_child_span: false
                  routeConfig:
                    name: basic_http_route
                    virtual_hosts:
                      - name: backend
                        domains: ["*"]
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: cluster_http
      - name: listener_tcp
        address:
          socket_address: { address: 127.0.0.1, port_value: 8001 }
        filterChains:
          - name: filter_chain_tcp
            filter_chain_match:
              destination_port: 8001
            filters:
              - name: tcp_proxy_filter
                typedConfig:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                  statPrefix: ingress_tcp
                  cluster: cluster_tcp

    clusters:
      - name: cluster_http
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN


        health_checks:
        - timeout: 0.1s
          interval: 5s
          healthy_threshold: "3"
          unhealthy_threshold: "2"
          http_health_check:
            path: /health

        load_assignment:
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4001
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4002
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4003
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4004

      - name: cluster_http2
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN

        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}

        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: athlone_1.beefcake.com
            common_tls_context:
              tls_params:
                tls_minimum_protocol_version: TLSv1_2
                tls_maximum_protocol_version: TLSv1_2
              tls_certificates:
                - certificate_chain:
                    filename: ./test_certs/beefcakeCA-gathered/beefcake-athlone.cert.pem
                  private_key:
                    filename: ./test_certs/beefcakeCA-gathered/beefcake-athlone.key.pem
  ## PROBLEM, depending on the configuration in the strict mode client needs to respond with certificate that matches the domain in http request which comes from the downstream
  ## so if client requests dublin_1 we need to respond with SAN dublin_1 or a wildcard... otherwise we need to disable the cert validation... or disable SNI in client config
              validation_context:
                trusted_ca:
                  filename: ./test_certs/beefcakeCA-gathered/beefcake.intermediate.ca-chain.cert.pem

        health_checks:
        - timeout: 0.1s
          interval: 5s
          healthy_threshold: "3"
          unhealthy_threshold: "2"
          http_health_check:
            path: /health
            codec_client_type: HTTP2

        load_assignment:
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4005
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4006
